--- a/canjear.html
+++ b/canjear.html
@@ -39,7 +39,7 @@
     .reward-card .btn-cta { align-self:flex-start; }
     .reward-card a, .reward-card button { text-decoration:none; }
 
-    /* QR principal */
+    /* QR principal (más grande) */
     .qr-box{ display:none; margin-top:20px; padding:16px;
       background: rgba(25,25,25,.7); border:1px solid rgba(255,255,255,.08);
       border-radius:16px; }
@@ -78,9 +78,9 @@
       align-items:center; justify-content:center; padding:20px;
     }
     .qr-fullscreen__img {
-      max-width:92vw;
-      max-height:82vh;
-      width:auto; height:auto;
+      max-width:92vw;           /* ancho máx según pantalla */
+      max-height:82vh;          /* alto máx según pantalla */
+      width:auto; height:auto;  /* mantiene proporción */
       background:#fff; border-radius:12px; padding:14px;
       box-shadow: 0 0 30px rgba(240,53,53,.45);
       display:block;
@@ -159,7 +159,7 @@
   </div>
 
   <script>
-  // ===== Firebase =====
+  // ====== Firebase ======
   if (!firebase.apps.length) {
     console.error('Firebase no está inicializado. Revisa firebase-config.js');
     alert('No se pudo inicializar Firebase. Verifica firebase-config.js');
@@ -172,12 +172,12 @@
 
   // Catálogo de recompensas
   const REWARDS = [
-    { id:'limonada',       name:'Limonada 16 oz',          cost:10 },
-    { id:'ensalada-cesar', name:'Ensalada Cesar',          cost:25 },
-    { id:'chicken-burger', name:'Hamburguesa de pollo',    cost:32 },
-    { id:'hamburguesa',    name:'Hamburguesa sencilla',    cost:300 },
-    { id:'brownie',        name:'Brownie con helado',      cost:450 },
-    { id:'combo-kids',     name:'Combo infantil',          cost:600 },
+    { id:'limonada',     name:'Limonada 16 oz',       cost:10 },
+    { id:'ensalada',     name:'Ensalada Cesar',       cost:25 },
+    { id:'chicken-burg', name:'Hamburguesa de pollo', cost:32 },
+    { id:'hamburguesa',  name:'Hamburguesa sencilla', cost:300 },
+    { id:'brownie',      name:'Brownie con helado',   cost:450 },
+    { id:'combo-kids',   name:'Combo infantil',       cost:600 },
   ];
   function renderRewards(){
     $('rewardsGrid').innerHTML = REWARDS.map(r => `
@@ -192,12 +192,27 @@
   function fmtDate(ms){ if(!ms) return ''; return new Date(ms).toLocaleDateString('es-MX',{year:'numeric',month:'2-digit',day:'2-digit'}); }
   function daysLeft(ms){ if(!ms) return -999; return Math.ceil((ms - Date.now())/86400000); }
 
-  // Estado
-  let _tickets = [];
-  let _redemps = [];
-  let _pointsNode = 0;
+  // ====== Helpers robustos ======
+  function getTicketPoints(t){
+    // acepta cualquiera de estas variantes
+    const p1 = Number(t.points || 0);
+    const p2 = Number(t.puntosTotal || 0);
+    const p3 = (t.puntos && typeof t.puntos === 'object') ? Number(t.puntos.total || 0) : Number(t.puntos || 0);
+    const pts = [p1,p2,p3].find(v => Number.isFinite(v) && v>0) || 0;
+    return pts;
+  }
+  function getTicketExpire(t){
+    return t.vencePuntos ? Number(t.vencePuntos) :
+           (t.createdAt ? Number(t.createdAt) + 180*86400000 : null);
+  }
 
-  // ===== Utilidades de QR =====
+  // Estado
+  let _tickets = [];     // tickets RTDB
+  let _redemps = [];     // redemptions espejo RTDB
+  let _pointsNode = 0;   // users/{uid}/points (número)
+  let _syncedOnce = false;
+
+  // ====== Utilidades de QR ======
   function getDataURLFrom(el){
     if (!el) return null;
     const img = el.querySelector('img');
@@ -208,28 +223,26 @@
   }
   function openQrFullscreenFromContainer(containerEl){
     const dataURL = getDataURLFrom(containerEl);
-    if (!dataURL) { alert('Aún no está listo el QR. Intenta de nuevo.'); return; }
-    const modal = $('qrFullscreen');
-    $('qrFsImg').src = dataURL;
-    modal.style.display = 'flex';
-    modal.setAttribute('aria-hidden','false');
+    if (!dataURL) { alert('Aún no está listo el QR. Intenta de nuevo en un momento.'); return; }
+    const modal = $('qrFullscreen'); const img = $('qrFsImg');
+    img.src = dataURL; modal.style.display = 'flex'; modal.setAttribute('aria-hidden','false');
   }
   (function bindQrModal(){
-    const modal = $('qrFullscreen');
-    const btnClose = $('qrFsClose');
+    const modal = $('qrFullscreen'); const btnClose = $('qrFsClose');
     btnClose.onclick = ()=>{ modal.style.display='none'; modal.setAttribute('aria-hidden','true'); };
     modal.addEventListener('click', (e)=>{ if(e.target===modal) btnClose.click(); });
   })();
 
-  // ===== Cálculo y render =====
+  // ====== Cálculos y render ======
   function recalcAndRender() {
     const rows = [];
     let ptsTicketsActivos = 0;
     const proximos = [];
+
     _tickets.forEach(t=>{
-      const pts = Number(t.puntos||0);
+      const pts = getTicketPoints(t);
       if (!pts) return;
-      const vence = t.vencePuntos ? Number(t.vencePuntos) : (Number(t.createdAt||0) + 180*86400000);
+      const vence = getTicketExpire(t);
       const left  = daysLeft(vence);
       const activo = left >= 0;
       if (activo) {
@@ -242,22 +255,22 @@
         <td style="font-weight:700; ${activo?'color:#9be49b':'color:#ff9a9a'}">${activo?'Activo':'Vencido'}</td>
       </tr>`);
     });
+
     tbody.innerHTML = rows.length ? rows.join('') : `<tr><td colspan="3" class="warn">Sin puntos registrados.</td></tr>`;
 
+    const now = Date.now();
     const spent = _redemps
       .filter(r => String(r.status).toLowerCase()==='canjeado')
       .reduce((a,r)=> a + (Number(r.cost)||0), 0);
 
-    const now = Date.now();
     const reserved = _redemps
       .filter(r => String(r.status).toLowerCase()==='pendiente')
       .filter(r => !r.expiresAt || Number(r.expiresAt) > now)
       .reduce((a,r)=> a + (Number(r.cost)||0), 0);
 
-    // SALDO CORRECTO
     const calculatedAvailable = Math.max(0, ptsTicketsActivos - spent - reserved);
 
-    // Mostrar SIEMPRE lo calculado
+    // Muestra el disponible y guarda un “badge” si hubo sincronización
     const span = $('puntosActivos');
     span.textContent = String(calculatedAvailable);
     span.dataset.value = String(calculatedAvailable);
@@ -269,13 +282,16 @@
       ? `Tienes ${reserved} pts reservados en cupones pendientes.`
       : '';
 
-    // Sincronizar /points si está distinto
+    // Sincroniza users/{uid}/points si quedó desfasado (solo una vez por carga)
     const badge = $('syncBadge');
-    const user = auth.currentUser;
-    if (user && Number(_pointsNode||0) !== calculatedAvailable) {
-      db.ref(`users/${user.uid}/points`).set(calculatedAvailable)
-        .then(()=>{ _pointsNode = calculatedAvailable; badge.style.display='inline'; })
-        .catch(()=>{ /* silencioso */ });
+    if (!_syncedOnce && Number(_pointsNode||0) !== calculatedAvailable) {
+      const user = auth.currentUser;
+      if (user) {
+        _syncedOnce = true;
+        db.ref(`users/${user.uid}/points`).set(calculatedAvailable)
+          .then(()=>{ _pointsNode = calculatedAvailable; badge.style.display='inline'; })
+          .catch(()=>{});
+      }
     } else {
       badge.style.display='none';
     }
@@ -297,9 +313,9 @@
     items.forEach(d=>{
       const id = d.code;
       const expStr = fmtDate(d.expiresAt);
-      const chipCls = (d.status==='pendiente') ? 'chip-warn' : (d.status==='canjeado' ? 'chip-ok' : 'chip-err');
-      const chipTxt = d.status;
-      const needsQR = d.status === 'pendiente';
+      const statusLower = String(d.status||'').toLowerCase();
+      const chipCls = (statusLower==='pendiente') ? 'chip-warn' : (statusLower==='canjeado' ? 'chip-ok' : 'chip-err');
+      const needsQR = statusLower === 'pendiente';
       const qrBoxId = `qr-hist-${id}`, dlId=`dl-${id}`, bigId=`big-${id}`;
       const rewardLabel = d.rewardName || d.rewardId;
 
@@ -307,7 +323,7 @@
         <article class="hist-card">
           <div style="display:flex; justify-content:space-between; align-items:center;">
             <strong>${rewardLabel}</strong>
-            <span class="chip ${chipCls}">${chipTxt}</span>
+            <span class="chip ${chipCls}">${d.status}</span>
           </div>
           <div>Coste: <b>${d.cost||0} pts</b></div>
           <div>Expira: <b>${expStr || '-'}</b></div>
@@ -367,14 +383,15 @@
       return alert(`Te faltan ${reward.cost - disponibles} puntos para canjear ${reward.name}.`);
     }
 
-    // Reserva en /points (que ya está sincronizado al calculado)
+    // Reserva (resta) directamente en users/{uid}/points
     const tx = await db.ref(`users/${user.uid}/points`).transaction(curr => {
       const prev = Number(curr)||0;
-      if (prev < reward.cost) return;
+      if (prev < reward.cost) return; // aborta
       return prev - reward.cost;
     });
     if (!tx.committed) { alert('No fue posible reservar puntos. Intenta de nuevo.'); return; }
 
+    // Genera y guarda el cupón
     const code = generarCodigo(10);
     const expiresAt = Date.now() + 3*24*60*60*1000; // 3 días
     const payloadObj = { v:1, brand:"Applebee's", uid:user.uid, code, rewardId:reward.id, cost:reward.cost, exp:expiresAt };
@@ -408,13 +425,14 @@
       $('btnOpenQR').onclick = ()=> openQrFullscreenFromContainer(qrEl);
       $('qrBox').scrollIntoView({ behavior: 'smooth', block: 'start' });
     } catch (e) {
+      // rollback puntos
       await db.ref(`users/${user.uid}/points`).transaction(curr => (Number(curr)||0) + reward.cost);
       console.error(e);
       alert('No se pudo crear el canje. Intenta de nuevo.');
     }
   }
 
-  // ===== App =====
+  // ====== App ======
   document.getElementById('btnLogout').addEventListener('click', async () => {
     try { await auth.signOut(); location.href = 'index.html'; } catch (e) { alert('No se pudo cerrar sesión'); }
   });
@@ -423,24 +441,26 @@
     if(!user){ location.href='index.html'; return; }
     renderRewards();
 
+    // Saldo "oficial" (se sincroniza para evitar discrepancias visuales)
     db.ref(`users/${user.uid}/points`).on('value', (snap)=>{
       _pointsNode = Number(snap.val()||0);
       recalcAndRender();
     });
 
+    // Tickets (de aquí se calcula la “base” de puntos)
     db.ref(`users/${user.uid}/tickets`).on('value', (snap)=>{
       const val = snap.val() || {};
       _tickets = Object.values(val).map(t => ({
         ...t,
         total: Number(t.total || 0),
-        puntos: Number(t.puntos || 0),
         createdAt: Number(t.createdAt || 0),
-        vencePuntos: t.vencePuntos ? Number(t.vencePuntos) : null
+        vencePuntos: getTicketExpire(t)
       }));
       _tickets.sort((a,b) => (b.createdAt||0) - (a.createdAt||0));
       recalcAndRender();
     });
 
+    // Redenciones
     db.ref(`users/${user.uid}/redemptions`).on('value', (snap)=>{
       const val = snap.val() || {};
       _redemps = Object.keys(val).map(k => ({ code:k, ...val[k] }));
