--- a/canjear.html
+++ b/canjear.html
@@ -98,10 +98,10 @@
 </head>
 <body class="bg-animated">
   <header class="top-bar">
-    <a href="panel.html" class="link-back--pill"> ← Volver</a>
+    <a href="panel.html" class="link-back--pill"> ←Volver</a>
     <div class="center-section"><p>Canjear puntos</p></div>
     <div class="right-section">
-      
+      <button id="btnLogout" class="btn-cta btn-logout" type="button">Salir</button>
     </div>
   </header>
 
