--- a/panel.html
+++ b/panel.html
@@ -103,7 +103,7 @@
         <span id="avatarInitials">--</span>
       </button>
 
-      <button id="btnLogout" class="btn-logout" type="button">Salir</button>
+      <button id="btnLogout" class="btn-logout" type="button">Cerrar Sesion</button>
     </div>
   </header>
 
@@ -391,3 +391,4 @@
   </script>
 </body>
 </html>
+
