--- a/canjear.html
+++ b/canjear.html
@@ -99,7 +99,7 @@
 <body class="bg-animated">
   <header class="top-bar">
     <a href="panel.html" class="link-back--pill"> ←Volver</a>
-    <div class="center-section"><p>Canjear puntos</p></div>
+    <div class="center-section"><p></p></div>
     <div class="right-section">
       <button id="btnLogout" class="btn-cta btn-logout" type="button">Salir</button>
     </div>
@@ -478,3 +478,4 @@
   </script>
 </body>
 </html>
+
